# llmshim

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: publish-pypi.yml  release.yml
api/: openapi.yaml
benchmarks/: bench.rs  bench_python.py
clients/python/: .gitignore  README.md  llmshim.py  pyproject.toml  test_client.py  test_e2e.py
clients/python/llmshim/: __init__.py  _client.py  _server.py
clients/python/llmshim_api_client/: __init__.py
clients/python/llmshim_api_client/api/default/: chat.py  chat_stream.py  health_check.py  list_models.py
clients/python/llmshim_api_client/models/: __init__.py  chat_request.py  chat_request_provider_config.py  chat_response.py  config.py  config_reasoning_effort.py  error_response.py  error_response_error.py  health_response.py  message.py  message_content_type_1_item.py  message_role.py  models_response.py  models_response_models_item.py  response_message.py  stream_event_type_0.py  stream_event_type_1.py  stream_event_type_2.py  stream_event_type_3.py  stream_event_type_4.py  stream_event_type_5.py  tool_call.py  tool_call_function.py  tool_call_type.py  usage.py
clients/typescript/: README.md  package-lock.json  package.json  test.ts
clients/typescript/src/: api.d.ts  index.ts
examples/: chat.rs  stream.rs
examples/clients/: javascript_client.mjs  python_client.py  typescript_client.ts
src/: client.rs  config.rs  env.rs  error.rs  fallback.rs  lib.rs  log.rs  main.rs  models.rs  provider.rs  router.rs  vision.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  xai.rs
src/proxy/: convert.rs  error.rs  handlers.rs  mod.rs  types.rs
tests/: integration.rs  integration_fallback.rs  integration_gemini.rs  integration_gemini_tools.rs  integration_long_context.rs  integration_multimodel.rs  integration_proxy.rs  integration_thinking.rs  integration_tool_roundtrip.rs  integration_vision.rs  unit_anthropic.rs  unit_fallback.rs  unit_fast_mode.rs  unit_gemini.rs  unit_log.rs  unit_models.rs  unit_multimodel.rs  unit_openai.rs  unit_proxy.rs  unit_proxy_convert.rs  unit_router.rs  unit_sse.rs  unit_tools.rs  unit_vision.rs  unit_xai.rs
