[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmshim"
version = "0.1.0"
description = "Multi-provider LLM gateway — one interface, every provider"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://github.com/sanjay920/llmshim"
Repository = "https://github.com/sanjay920/llmshim"

[tool.setuptools.packages.find]
include = ["llmshim*"]

[tool.setuptools.package-data]
llmshim = ["bin/*"]
