[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "llmshim"
dynamic = ["version"]
description = "Multi-provider LLM gateway — one interface, every provider"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/sanjay920/llmshim"
Repository = "https://github.com/sanjay920/llmshim"

[tool.maturin]
bindings = "bin"
manifest-path = "../../Cargo.toml"
module-name = "llmshim"
python-source = "."
strip = true
features = ["proxy"]
